# ml-demo

./: ml-app-draft.wadm
actors/image-ui/: Cargo.toml  actor.mk  wasmcloud.toml
actors/image-ui/src/: lib.rs
actors/image-ui/ui/: package.json
actors/image-ui/ui/public/: index.html  manifest.json
actors/image-ui/ui/src/: App.js  ColorModeSwitcher.js
actors/imagenetpostprocessor/: wasmcloud.toml
actors/imagenetpreprocessor/: wasmcloud.toml
actors/imagenetpreprocrgb8/: wasmcloud.toml
actors/inferenceapi/: wasmcloud.toml
