[package]
name = "ml_image_ui"
version = "0.2.0"
authors = [ "wasmCloud Team" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "ml_image_ui"

[dependencies]
futures = "0.3"
mime_guess = "2.0.4"
rust-embed = "8.0.0"
wasmbus-rpc = "0.13"
wasmcloud-interface-httpserver = "0.10"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
